fixed multiple layout issues on tablet sizes

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .section-body {
-        @apply tracking-[-0.02rem] text-dark-gray font-[500] leading-[1.35rem]
+        @apply tracking-[-0.02rem] text-dark-gray font-[500] leading-[1.35rem] md:max-lg:leading-[1.25rem] md:max-lg:tracking-[-0.05rem]
     }
     .section-tablet-layout {
         @apply md:flex md:justify-center md:items-center
